@@ -112,7 +112,7 @@ function _databaseUpdate_1() {
 	global $sql;
 
 	$query = "INSERT INTO config (name, value) VALUES (? , ?)";
-	$rs = exec_query($sql, $query, array('DATABASE_REVISION', '1'));
+	exec_query($sql, $query, array('DATABASE_REVISION', '1'));
 }
 
 
@@ -141,7 +141,7 @@ function _databaseUpdate_2() {
 	// subdomain mail + forward
 	$sqlUpd[] = "UPDATE `mail_users`, `subdomain`, `domain`
 		SET `mail_addr` = CONCAT(`mail_acc`,'@',`subdomain_name`,'.',`domain_name`)
-		WHERE `mail_users`.`domain_id` = `subdomain`.`domain_id` AND `mail_users`.`sub_id` = `subdomain`.`subdomain_id` 
+		WHERE `mail_users`.`domain_id` = `subdomain`.`domain_id` AND `mail_users`.`sub_id` = `subdomain`.`subdomain_id`
 			AND `mail_users`.`domain_id` = `domain`.`domain_id`
 			AND (`mail_type` = 'subdom_mail' OR `mail_type` = 'subdom_forward')";
 
@@ -160,15 +160,26 @@ function _databaseUpdate_2() {
 	// subdomain catchall
 	$sqlUpd[] = "UPDATE `mail_users`, `subdomain`, `domain`
 		SET `mail_addr` = CONCAT('@',`subdomain_name`,'.',`domain_name`)
-		WHERE `mail_users`.`domain_id` = `subdomain`.`domain_id` AND `mail_users`.`sub_id` = `subdomain`.`subdomain_id` 
+		WHERE `mail_users`.`domain_id` = `subdomain`.`domain_id` AND `mail_users`.`sub_id` = `subdomain`.`subdomain_id`
 			AND `mail_users`.`domain_id` = `domain`.`domain_id`
 			AND `mail_type` = 'subdom_catchall'";
 
-	foreach($sqlUpd as $s) // go for it: run them all
-	{
+	// go for it: run them all
+	foreach($sqlUpd as $s) {
 		$sql->Execute($s);
 	}
 
 } // end of _databaseUpdate_2
 
+/*
+ * Fix for Ticket #1139 http://www.isp-control.net/ispcp/ticket/1139
+ * written by Benedikt Heintel, 2008-03-27
+ */
+function _databaseUpdate_3() {
+	global $sql; // we need the gloabl database connection
+
+	$query = "ALTER IGNORE TABLE `orders_settings` CHANGE `id` `id` int(10) unsigned NOT NULL auto_increment";
+	$sql->Execute($query);
+
+} // end of _databaseUpdate_3
 ?>
